<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="controller"
            type="com.udacity.shoestore.screens.welcome.WelcomeFragment" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
    tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:text="@string/welcome_text" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:onClick="@{() -> controller.navigateToInstructions()}"
            android:text="@string/read_instruction" />

</LinearLayout>
</layout>
