<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="controller"
            type="com.udacity.shoestore.screens.instruction.InstructionFragment" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".InstructionFragment">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/instruction_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="195dp"
            android:layout_height="165dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:minHeight="48dp"
            android:paddingHorizontal="12dp"
            android:text="@string/instruction_text" />

        <Button
            android:id="@+id/shoelistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:onClick="@{() -> controller.navigateToListing()}"
            android:text="@string/button_shoe_list_text" />

    </LinearLayout>
</layout>
